# temp-overlay

./: .gitignore  CMakeLists.txt  README.md  sensors.sln
.github/workflows/: build-windows-exe.yml
TempOverlay/: CloseButtonForm.cs  EmbeddedFontLoader.cs  FontSpriteAtlas.cs  OutlineLabel.cs  OverlayForm.cs  OverlaySettings.cs  Program.cs  README.md  SettingsForm.cs  StartupManager.cs  TempOverlay.csproj  TemperatureReader.cs  app.manifest
